Changes from the last meeting

--- a/Kevin_Preprocessing.ipynb
+++ b/Kevin_Preprocessing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -87,13 +87,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "source": [
+    "raw = mne.io.read_raw_bdf('{}{}VP_{}.bdf'.format(EEG_DATA_PATH, os.sep, subj), preload=True)\n"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
-     "is_executing": false
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "source": [
     "def load_eeg_data(subj, data_path, montage_path):\n",
     "    raw = mne.io.read_raw_bdf('{}{}VP_{}.bdf'.format(data_path, os.sep, subj), preload=True)\n",
@@ -123,7 +136,9 @@
     "    raw.drop_channels(['PO9', 'FT9'])\n",
     "    \n",
     "    return raw"
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
